--- a/Rps.css
+++ b/Rps.css
@@ -454,4 +454,9 @@ body {
   width: 100%;
   height: 220px;
 }
+@media(max-width:440px){
+    .options_container, .playground, .choices_text{
+        transform: scale(0.8);
+    }
+}
 /*# sourceMappingURL=Rps.css.map */
