--- a/Rps.css
+++ b/Rps.css
@@ -455,6 +455,11 @@ body {
   height: 220px;
 }
 @media(max-width:440px){
+     .options_container{
+    background-image: url(images/bg-triangle.svg);
+    background-repeat: no-repeat;
+    background-position: center ;
+    }
     .options_container, .playground, .choices_text{
         transform: scale(0.8);
     }
