--- a/Rps.css
+++ b/Rps.css
@@ -124,19 +124,19 @@ body {
 
 .options_container #paper {
   background: -webkit-gradient(linear, left top, left bottom, from(#4865f4), to(#5671f5));
-  background: linear-gradient(#4865f4, #5671f5);
+  background: linear-gradient(#4865f4, #5671f5);box-shadow: inset 0 -10px 0 rgb(0 0 0 / 25%);
  
 }
 
 .options_container #scissors {
   background: -webkit-gradient(linear, left top, left bottom, from(#ec9e0e), to(#eca922));
-  background: linear-gradient(#ec9e0e, #eca922);
+  background: linear-gradient(#ec9e0e, #eca922);box-shadow: inset 0 -10px 0 rgb(0 0 0 / 25%);
 
 }
 
 .options_container #rock {
   background: -webkit-gradient(linear, left top, left bottom, from(#dc2e4e), to(#dd405d));
-  background: linear-gradient(#dc2e4e, #dd405d);
+  background: linear-gradient(#dc2e4e, #dd405d);box-shadow: inset 0 -10px 0 rgb(0 0 0 / 25%);
 
 }
 
