--- a/Rps.css
+++ b/Rps.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300&display=swap');
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: visible;
+  font-family:Barlow Semi Condensed, sans-serif;
 }
 
 body {
